# neuroatlas-ai

./: .cursorignore  .editorconfig  .gitignore  .gitlab-ci.yml  .runner_system_id  ARCHITECTURE.md  Makefile  README.md  alembic.ini  docker-compose.yml  make.bat  make.cmd  make.ps1  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: debugger.md  fixer.md  implementer.md  planner.md  reviewer.md  scrum_master.md  tester.md
.cursor/commands/: architecture.md  debug.md  docstring.md  explain.md  improve.md  optimize.md  prompting.md  review.md  tests.md
.cursor/hooks/: pre-push-mr-body.sh
.cursor/rules/: backend_conventions.mdc  project_rules.mdc  project_structure.mdc
.githooks/: pre-push
.github/: pull_request_template.md
.github/merge_request_templates/: Default.md
.github/workflows/: ci.yml
.gitlab/merge_request_templates/: Default.md
docs/: ARCHITECTURE.md  ai-engineer-roadmap.md  education-roadmap.md  research-plan.md  roadmap.md
docs/CV/: generate_cv.py  generate_cv_ru.py
docs/ci/: github-actions.md  self-hosted-runner-plan.md  self-hosted-runner.md
docs/design/: neural-nexus-demo.html
docs/diagrams/: auth-admin-ui-browser-flow.md  auth-admin-ui-cookie-request-flow.md  auth-api-gateway-flow.md  auth-architecture.md  auth-browser-gateway-flow.md  auth-jit-upsert.md  auth-keycloak-user-registration.md  auth-paymentgate-comparison.md  auth-request-flow.md  auth-users-schema.md  edge-architecture.md
docs/jira/: README.md  backlog-keys.md  plan.md  sprint-01-pioneer.md  sprint-02-admin-ui-pioneer.md  sprint-03-clinical-api.md
docs/private/: vladimir-novikov.md
docs/smoke/: admin-ui-e2e.md
infra/: .env.example  application.compose.yml  infra.compose.yml
infra/ci/: build.ci.yml  deploy.ci.yml  prepare.ci.yml  test.ci.yml
infra/kafka/: init_topics.py
infra/keycloak/: ensure_realm.py
scripts/: README.md  _ab_rot_register_check.py  _ab_torsion_perf_check.py  _compare_byzov_dicom.py  _compare_byzov_fast.txt  generate_mr_body.py  profile_diagnostics.py  radius_torsion_registration.py  radius_torsion_registration_nov.py  radius_torsion_v3.py  validation_selftests.py
scripts/.github/: pull_request_template.md
scripts/ci/: register-gitlab-runner.ps1  register-gitlab-runner.sh
scripts/dev/: install-make-command.ps1  install-venv-make.ps1  pycharm-terminal-init.ps1  setup-pycharm-make.ps1  venv-make.cmd
scripts/jira/: bootstrap_backlog.ps1  bootstrap_pioneer.ps1  create_admin_ui_tasks.ps1  create_gateway_auth_tasks.ps1  jira_api.ps1  (+4 more)
src/: conftest.py
(+162 files in other folders)
