[tool.poetry]
name = "neuroatlas-ai"
version = "0.1.0"
description = "AI-powered Clinical Decision Support System for Pediatric Neurorehabilitation"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "~0.116.0"
uvicorn = "^0.29.0"
structlog = "^24.1.0"
python-ulid = "^2.5.0"
orjson = "^3.10.15"
httpx = "^0.27.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.patients.dependencies]
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"

[tool.poetry.group.ml.dependencies]
# XGBoost (PyPI wheels): https://xgboost.readthedocs.io/en/stable/install.html
# Install: `poetry install --with ml` or `make install_ml`
# macOS: install OpenMP first — `brew install libomp` (see upstream install guide).
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
xgboost = "^3.3.0"
shap = "^0.46.0"

[tool.poetry.group.rag.dependencies]
sentence-transformers = "^3.0.0"
pgvector = "^0.3.0"

[tool.poetry.group.llm.dependencies]
# provider-agnostic; pick one at integration time
openai = "^1.40.0"

[tool.poetry.group.housekeeper.dependencies]
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
greenlet = "^3.0.0"

[tool.poetry.group.messaging.dependencies]
aiokafka = "^0.11.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.4.3"
mypy = "^1.11.1"
bandit = "^1.7.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.ruff]
output-format = "grouped"
exclude = [".git", "__pycache__", ".pytest_cache"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["C9", "E", "F", "Q", "W", "ASYNC", "PLE1142"]
ignore = ["E203"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
python_files = "test*.py"
testpaths = "src"
pythonpath = "src"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/settings.py",
    "conftest.py",
    "*/domain/ports/*",
]

[tool.coverage.report]
skip_covered = true
